to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.

7/31/2001: beazley
           Modified the %constant directive to be more C-like in syntax.
           The syntax is now:

                %constant NAME = VALUE;
                %constant TYPE NAME = VALUE;
 
           For example:

                %constant Foo *Bar = &Spam;

           *** POTENTIAL INCOMPATIBILITY ***  Modules that were using
           the %constant directive directly will need to be modified.
      
7/30/2001: beazley
           Removed obscure and undocumented form of the %inline directive:

               %inline int blah(int a, int b) {
                  ...
               }

           *** POTENTIAL INCOMPATIBILITY *** 
           (note: this feature was never documented and is withdrawn)

7/30/2001: beazley
           Removed support for functions with no explicitly declared
           return type.  For example:

                  foo(int);

           In C, such functions were implicitly assumed to return an 'int'.
           In C++, this is illegal.  Either way, it's considered bad
           style.  Removing support for this in SWIG will simplify
           certain issues in parsing.
           *** POTENTIAL INCOMPATIBILITY ***

7/30/2001: mkoeppe
	   * Partial merge from the CVS trunk.  The Source/DOH directory
	     and most of the Source/Swig directory is up-to-date now.
	   * [Guile] %scheme is now a macro for %insert("scheme").  
	     New syntax:  %scheme "FILENAME"; 
	     New syntax:  %scheme %{ SCHEME-CODE %}
	     New macros %multiple_values, %values_as_list,
	     %values_as_vector. 

7/29/2001: beazley